--wip-- [skip ci]

--- a/README.adoc
+++ b/README.adoc
@@ -1,50 +1,8 @@
-= Latency policy
+= Gravitee Cloud APIM
 
-ifdef::env-github[]
-image:https://ci.gravitee.io/buildStatus/icon?job=gravitee-io/gravitee-policy-latency/master["Build status", link="https://ci.gravitee.io/job/gravitee-io/job/gravitee-policy-latency"]
-image:https://badges.gitter.im/Join Chat.svg["Gitter", link="https://gitter.im/gravitee-io/gravitee-io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
-endif::[]
+= Upgrade
 
-== Phase
-
-[cols="2*", options="header"]
-|===
-^|onRequest
-^|onResponse
-
-^.^| X
-^.^| X
-
-|===
-
-== Description
-
-
-
-== Configuration
-
-You can configure the policy with the following options:
-
-|===
-|Property |Required |Description |Type| Default
-
-.^|scope
-^.^|X
-|Execution scope (`request` or `response`).
-^.^|string
-^.^|`REQUEST`
-
-
-|===
-
-== Errors
-
-== HTTP status code
-
-|===
-|Code |Message
-
-.^| ```500```
-| Server error
-
-|===
+```shell
+cd tools
+sh prepare.sh 1.25.0
+```
