--- a/readme.adoc
+++ b/readme.adoc
@@ -1,8 +1,20 @@
-= Gravitee Cloud APIM
+= OpenID Connect user info policy
 
-= Upgrade
+ifdef::env-github[]
+image:https://ci.gravitee.io/buildStatus/icon?job=gravitee-io/gravitee-policy-openid-connect-userinfo/master["Build status", link="https://ci.gravitee.io/job/gravitee-io/job/gravitee-policy-openid-connect-userinfo/"]
+image:https://badges.gitter.im/Join Chat.svg["Gitter", link="https://gitter.im/gravitee-io/gravitee-io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
+endif::[]
 
-```shell
-cd tools
-sh prepare.sh 1.25.0
-```
+== Phase
+
+[cols="2*", options="header"]
+|===
+^|onRequest
+^|onResponse
+
+^.^| X
+^.^|
+
+|===
+
+== Description
